[package]
name = "futures-cache"
version = "0.10.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "Futures-aware cache backed by sled."
documentation = "https://docs.rs/futures-cache"
readme = "README.md"
homepage = "https://github.com/udoprog/futures-cache"
repository = "https://github.com/udoprog/futures-cache"
license = "MIT/Apache-2.0"
keywords = ["async", "cache"]
categories = ["asynchronous"]

[dependencies]
futures-channel = "0.3.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde_cbor = "0.11.1"
serde-hashkey = "0.3.0"
log = "0.4.11"
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.2"
parking_lot = "0.11.1"
hashbrown = "0.9.1"
pin-utils = "0.1.0"
crossbeam = "0.8.0"
sled = "0.34.6"

[dev-dependencies]
tempdir = "0.3.7"
futures = "0.3.8"
tokio = { version = "0.2.0", features = ["full"] }
reqwest = "0.10.10"
