[package]
name = "futures-cache"
version = "0.10.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.68"
description = "Futures-aware cache backed by sled."
documentation = "https://docs.rs/futures-cache"
readme = "README.md"
homepage = "https://github.com/udoprog/futures-cache"
repository = "https://github.com/udoprog/futures-cache"
license = "MIT/Apache-2.0"
keywords = ["async", "cache"]
categories = ["asynchronous"]

[dependencies]
futures-channel = "0.3.27"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde_cbor = "0.11.2"
serde-hashkey = "0.4.5"
log = "0.4.17"
chrono = { version = "0.4.23", features = ["serde"] }
hex = "0.4.3"
parking_lot = "0.12.1"
hashbrown = "0.13.2"
pin-utils = "0.1.0"
crossbeam = "0.8.2"
sled = "0.34.7"

[dev-dependencies]
tempdir = "0.3.7"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
reqwest = "0.11.14"
